--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
       $("#summernote").summernote();
     });
   </script>
+
 </head>
 
 <body>
@@ -115,7 +116,7 @@
           </div>
         </div>
       </div>
-      <form id="search">
+      <form id="search" action="/upload" method="POST" enctype="multipart/form-data">
         <input type="submit" id="search-text" value="searching" />
         <div style="
               width: 100%;
@@ -123,7 +124,8 @@
               border: 1px solid gray;
               margin-top: 30px;
             ">
-          <div id="summernote" style="width: 100%; height: 100%"></div>
+          <!-- <div id="summernote" style="width: 100%; height: 100%"></div> -->
+          <input type="file" name="file">
         </div>
         <div style="width: 100%; height: 100px; margin-top: 30px; padding: 10px">
           태그
