--- a/templates/index.html
+++ b/templates/index.html
@@ -51,17 +51,19 @@
                   bottom: 0;
                   margin: auto 0;
                 ">
-              <div class="arrow-container">
-                <a href="https://sports.news.naver.com/index.nhn" style="color: black">
-                  <i class="fa-solid fa-circle-arrow-up"></i>
-                </a>
-              </div>
+              <!--
+              <form class="arrow-container" action="/up">
+                <input type="submit" style="color: black">
+                <i class="fa-solid fa-circle-arrow-up"></i>
+                </input>
+              </form>
               <br />
-              <div class="arrow-container">
-                <a href="https://sports.news.naver.com/wfootball/index" style="color: black">
-                  <i class="fa-solid fa-circle-arrow-down"></i>
-                </a>
-              </div>
+              <form class="arrow-container" action="/down">
+                <input type="submit" style="color: black">
+                <i class="fa-solid fa-circle-arrow-down"></i>
+                </input>
+              </form>
+              -->
             </div>
           </div>
           <div style="width: 60%; height: 100%; background-color: #d8d8d8">
