--- a/templates/index.html
+++ b/templates/index.html
@@ -12,85 +12,36 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-  <!-- include summernote css/js -->
-  <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet" />
-  <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 </head>
 
 <body>
   <header>
-    <a id="title" style="display: block;" href="/method">MY WEBSITE</a>
+    <a id="title" style="display: block;" href="/method">Shoes Recommender</a>
   </header>
 
   <div id="container">
     <div id="content">
       <div id="result">
+        <!-- 제목 -->
         <div class="result-title">
-          <!-- 제목 -->
           <div id="result-title-text">RESULTS</div>
         </div>
-        <div style="
-              width: 100%;
-              height: 600px;
-              background-color: blue;
-              display: flex;
-            ">
-          <div style="
-                position: relative;
-                width: 10%;
-                height: 100%;
-                background-color: #fafafa;
-              ">
-            <!-- 화살표 -->
-            <div style="
-                  position: absolute;
-                  width: 100%;
-                  height: 100px;
-                  top: 0;
-                  bottom: 0;
-                  margin: auto 0;
-                ">
-              <!--
-              <form class="arrow-container" action="/up">
-                <input type="submit" style="color: black">
-                <i class="fa-solid fa-circle-arrow-up"></i>
-                </input>
-              </form>
-              <br />
-              <form class="arrow-container" action="/down">
-                <input type="submit" style="color: black">
-                <i class="fa-solid fa-circle-arrow-down"></i>
-                </input>
-              </form>
-              -->
+        <!-- 검색 결과 -->
+        <div id="result-box">
+          <!-- 화살표 -->
+          <div id="arrow-box">
+            <div id="arrow">
+
             </div>
           </div>
-          <div style="width: 60%; height: 100%; background-color: #d8d8d8">
-            <!-- 사진 -->
+          <!-- 사진 -->
+          <div id="img-box">
+
           </div>
-          <div style="
-                width: 30%;
-                height: 100%;
-                background-color: #848484;
-                position: relative;
-              ">
-            <!-- 설명 -->
-            <div style="
-                  position: absolute;
-                  top: 0;
-                  bottom: 0;
-                  left: 0;
-                  right: 0;
-                  width: 100%;
-                  height: 128px;
-                  margin: auto;
-                ">
-              <ul style="
-                    list-style-type: none;
-                    font-size: 1.2em;
-                    padding-left: 10px;
-                  ">
+          <!-- 설명 -->
+          <div id="description-box">
+            <div id="description">
+              <ul id="list">
                 <li>Name : Vans - 어센틱 레드</li>
                 <br />
                 <li>Price : 69,000Won</li>
@@ -100,29 +51,20 @@
             </div>
           </div>
         </div>
+        <!-- 구매처 -->
         <div class="result-title">
-          <!-- 구매처 -->
-          <div style="
-                background-color: #a4a4a4;
-                height: 100%;
-                position: relative;
-              ">
-            <div id="buy-place">구매처 :</div>
+          <div id="buy-place-box">
+            <div id="buy-place">구매처 : </div>
           </div>
         </div>
       </div>
+      <!-- 검색 -->
       <form id="search" action="/upload" method="POST" enctype="multipart/form-data">
         <input type="submit" id="search-text" value="search" />
-        <div style="
-              width: 100%;
-              height: 400px;
-              border: 1px solid gray;
-              margin-top: 30px;
-            ">
-          <!-- <div id="summernote" style="width: 100%; height: 100%"></div> -->
+        <div id="img-input">
           <input type="file" name="file">
         </div>
-        <div style="width: 100%; height: 100px; margin-top: 30px; padding: 10px">
+        <div id="tag">
           태그
         </div>
       </form>
