--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  background-color: #e6e6e6 !important;
+  background-color: #f9f9ff !important;
 }
 
 header {
   width: 100%;
   height: 50px;
-  background-color: #084b8a;
+  background-color: #0a3d6d;
 }
 
 a {
@@ -16,7 +16,7 @@ a {
 #title {
   width: 1200px;
   height: 50px;
-  background-color: #084b8a;
+  background-color: #0a3d6d;
 
   left: 0;
   right: 0;
@@ -36,7 +36,7 @@ a {
   right: 0;
   margin: 0 auto;
 
-  background-color: #e6e6e6;
+  background-color: white;
 }
 
 #result-title-text {
@@ -121,7 +121,7 @@ a {
 #content {
   width: 1200px;
   height: 800px;
-  background-color: #e6e6e6;
+  background-color: white;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -170,6 +170,37 @@ a {
   height: 800px;
 }
 
+#upload-name {
+  display: inline-block;
+  height: 40px;
+  padding: 0 10px;
+
+  vertical-align: middle;
+  border: 1px solid #dddddd;
+  width: 78%;
+  color: #999999;
+}
+
+#select {
+  display: inline-block;
+  padding: 10px 20px;
+  color: #fff;
+  vertical-align: middle;
+  background-color: #999999;
+  cursor: pointer;
+  height: 40px;
+  margin-left: 10px;
+}
+
+input[type="file"] {
+  position: absolute;
+  width: 0;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+}
+
 #search-text {
   width: 100%;
   height: 100px;
@@ -201,7 +232,7 @@ a {
 }
 
 footer {
-  background-color: #084b8a;
+  background-color: #0a3d6d;
   /* position: relative;
   transform: translateY(-100%);
   bottom: 0; */
@@ -213,7 +244,7 @@ footer {
 #copyright {
   width: 1200px;
   height: 50px;
-  background-color: #084b8a;
+  background-color: #0a3d6d;
 
   left: 0;
   right: 0;
